--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.1",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "jsdom": "^24.1.1",
+    "msw": "^2.6.0",
     "sass-embedded": "^1.77.8",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
